# Simulon

./: .gitignore  CHANGELOG.md  README.md  README_zh-CN.md  W_WORKFLOWS_GUIDE.md  clear_cache.py  pyproject.toml  setup.py  simulon_cuda.cp311-win_amd64.pyd  simulon_desktop.py
core/: analyser.py  barostat.py  box.py  element_info.py  energy_minimizer.py  md_model.py  md_simulation.py
cuda source/: eam_cuda_ext.cpp  eam_cuda_ext_kernel.cu  lj_energy_force.cpp  lj_energy_force_kernel.cu  neighbor_search.cpp  neighbor_search_kernel.cu  ops.cpp
cuda_test/: add.cpp  add_kernel.cu  cmd.txt  test_eam.py  test_eam_cuda.py  test_eam_fs_parser_regression.py  test_lj.py  test_w_bulk_relax_smoke.py  test_w_crack_smoke.py  test_w_dbtt_smoke.py  test_w_elastic_static.py  test_w_indent_smoke.py  test_w_tensile_smoke.py
desktop_app/: __init__.py  app.py  runner.py
graph_diffusion/: graph_utils.py
io_utils/: create_stable_structure.py  eam_parser.py  file_converter.py  reader.py  restart.py  w_bcc.py
machine_learning_potentials/: machine_learning_force.py
packaging/: Simulon.spec  build_desktop.py  build_installers.py  prepare_wheelhouse.py  requirements-desktop.txt
postprocess/: crack.py  dbtt.py  indentation.py  stress_strain.py
run_scripts/: check_w_orientation.py  demo_ar1000_nvt.py  demo_ar_nvt.py  demo_w250_nve.py  generate_lammps_lmp.py  lammps_compare.py  lj_run.json  lj_run.py  llm_gen_md_20250908_145953.py  llm_gen_md_20250908_151343.py  llm_gen_md_20250926_180559.py  mlps_run.json  mlps_run.py  plot_md_diagnostics.py  rebuild_dbtt_summary.py  rebuild_w_dbtt_summary.py  user_defined_run.json  user_defined_run.py  w_batch_report.py  w_bulk_relax.py  w_crack.py  w_crack_sweep.py  w_dbtt_scan.py  w_indent.py  w_tensile.py
simulation_agent/: __init__.py  simulation_agent_cn_ver.py  simulation_agent_eng_ver.py
simulon_cuda.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+25 files in other folders)
